[WPE] Layout test media/encrypted-media/mock-MediaKeySystemAccess.html is crashing https://bugs.webkit.org/show_bug.cgi?id=181225

Reviewed by Darin Adler.

Source/WebCore:

WebCore::CDM::createInstance assumes its private instance always
produces a valid pointer. This is not the case in the testing
mocks. Guard against it.

Test: media/encrypted-media/mock-MediaKeySystemAccess.html

* Modules/encryptedmedia/CDM.cpp:
(WebCore::CDM::createInstance): Guard against null pointers in
mock scenarios.

LayoutTests:

* platform/gtk/TestExpectations: The test is no longer crashing.
* platform/wpe/TestExpectations: Ditto.


Canonical link: https://commits.webkit.org/224615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261469 268f45cc-cd09-0410-ab3c-d52691b4dbfc